# for display continuity sake please use 2 spaces instead of tabs

2012-08-07 mmichaud <michael.michaud@free.fr>
  * Fix a bug in AttributeTablePanel : pressing a key starts the cell editing 
    mode, but it did not clear the selection and kept delete feature action 
    possible, which was quite dangerous. Now, the selection is cleared. 

2012-07-13 mmichaud <michael.michaud@free.fr>
  * Small NPE fix in MergeSelectedPolygonsWithNeighbourPlugIn
  
2012-07-12 mmichaud <michael.michaud@free.fr>
  * Select and activate SelectFeaturesTool the first time OpenJUMP is opened
    Selection is made in OpenJUMPConfiguration and activation in JUMPWorkbench

2012-07-12 Matthias Scholz <ms@jammerhund.de>
  * new DetachableInternalFrame class for detachable internal frames such as
    the InfoFrame and the ViewAttributesFrame (ViewAttributesPlugIn)
  * ViewAttributesPlugIn now saves/restores the window position and size in/from
    Blackboard.

2012-07-02 mmichaud <michael.michaud@free.fr>
  * Small fix related to mixed case table names in PostGIS driver.
  * Add a new PostGIS driver adding write capabilities to OpenJUMP (inclusion
    of the plugin in OpenJUMP core is not yet validated by the community though)
    
2012-07-07 ede
  * committed size optimized editing toolbox for evaluation
    internationalized tooltip text pending

2012-07-02 mmichaud <michael.michaud@free.fr>
  * PLUS version enhancement with addition of a ColorChooser plugin, a fix in
    csv-driver and a new plugin to project nodes on lines in topology extension

2012-07-01 mmichaud <michael.michaud@free.fr>, ede
  * fixed bug 3528917 which was introduced by persistent skinning changes

2012-06-18 mentaer <sstein@geo.uzh.ch>
  * Fixed bug in OpenUMPSextanteRasterLayer, the cellSize needs to be provided 
    first, otherwise the row and column number of raster cells will be zero, due
    to automated updating.

2012-06-11 Giuseppe Aruta (giuseppe_aruta@yahoo.it)