@@ -1,5 +1,9 @@
 # for display continuity sake please use 2 spaces instead of tabs
 
+2012-08-10 ede
+  * fixed flicker of left column in OpenWizard on resize  introduced by 
+    persistent skinning changes
+
 2012-08-07 mmichaud <michael.michaud@free.fr>
   * Fix a bug in AttributeTablePanel : pressing a key starts the cell editing 
     mode, but it did not clear the selection and kept delete feature action 
